--- a/index.html
+++ b/index.html
@@ -1,94 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Exoticar</title>
-    <link rel="stylesheet" href="style.css">
+       <meta charset="UTF-8">
+       <title>cat muffin</title>
+       <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class=""page-header">
-        <div class="wrapper"></div>
-        <div class="logo">
-            <img src="logo.png" alt="logo">
-        <nav class="main-nav">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">investors</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-</div>
- </header>
- <main>
-    <div class="banner">
-      <div class="banner-block">
-      <h1>creating the future</h1>
-      <p class="subtitle">Your new experience.your new friend</p>
-      <a href="#" class="learn-more">Learn more</a>
-      </div>
-    <div class="articles">
-      <div class="wrapper">
-    </div>
-    <div class="articles">
-    <article>
-        <h2>sports car</h2>
-        <p class="quote"> what is a sport car? A car may be a sporting automobile 
-            without being  a sports car</p>
-        <p class="text"> A sports car, or sportscar, is a small, usually two-seater, two-door automobile designed for spirited performance and nimble handling. The term "sports car" was used in The Times, London in 1919. According to USA's Merriam-Webster dictionary, USA's first known use of the term was in 1928. Sports cars started to become popular during the 1920s.
-        </p>
-        <p class="text">Sports cars may be spartan or luxurious, but high maneuverability and light weight are requisite. Sports cars are usually aerodynamically shaped (since the 1950s), and have a low center of gravity compared to standard models. Steering and suspension are typically designed for precise control at high speeds.Traditionally sports cars were open roadsters, but closed coupés also started to become popular during the 1930s, and the distinction between a sports car and a grand tourer is not absolute.
-        </p>
-    </article>
-    <article>
-    <h2> Seating Layout</h2>
-    <p class="quote">Traditional sports cars were typically two-seat roadsters.</p>
-    <p class="text">Although the first sports cars were derived from fast tourers, and early sporting regulations often demanded four seats (even three-seaters were often produced by coachbuilders), two seats became common from about the mid-1920s. Modern sports cars may also have small back seats that are often really only suitable for luggage or small children; such a configuration is referred to as a 2+2 (two full seats + two "occasional" seats).
-    </p>
-    <p class="text">Over the years, some manufacturers of sports cars have sought to increase the practicality of their vehicles by increasing the seating room. One method is to place the driver's seat in the center of the car, which allows two full-sized passenger seats on each side and slightly behind the driver. The arrangement was originally considered for the Lamborghini Miura, but abandoned as impractical because of the difficulty for the driver to enter/
-        exit the vehicle. McLaren used the design in their F1.</p>
-</article>
-    </div>
-  </div> 
-</div>   
- </main>
- <footer class="page-footer">
-    <div class="wrapper"></div>
-    <div class="footer-cool">
-        <h3>about</h3>
-    <ul>
-        <li>privacy police</li>
-        <li>trems of use </li>
-        <li>News</li>
-        <li>Events</li>
-    </ul>
-</div>
-<div class="footer-cool">
-   <h3>Get involoved</h3>
-   <ul>
-      <li>Work with us</li>
-      <li>Subscribe for Newsletter</li>
-      <Li>Forum</Li>
-   </ul>
-</div>
-<div>
-<div class="footer-co0l">
-    <h3>Help Center</h3>
-    <ul>
-        <li>AQFs</li>
-        <li>Contact Us</li>
-        <li>How to Start</li>
-    </ul>
-<div class="footer-cool">
-   <ul>
-        <li><a href="#" class="fb"></a></li>
-        <li><a href="#" class="tw"></a></li>
-        <li><a href="#" class="gb"></a></li>
-   </ul>
- <h3>social</h3>
-    <p class="copy">© 2017. ExotiCar. All Rights Reserved</p>
-</div>
-  </footer>
- </body>
+       <header class="header">
+          <div class="wrapper">
+             <a href="#" class="logo-link">
+             <img src="images/logo.png" alt="logo" class="logo-image">
+             </a>
+            </div>
+
+      </header>
+
+       <main class="main">
+         <div class="wrapper">
+           <img src="images/cat.png" alt="cat" class="main-cat">
+              <div class="main-text">
+                <p>Hello!</p>
+                <p>My name is Muffin!<br>
+                    I am 2 years old, very brave and smart. I am a great singer because I am very mewsical.</p>
+                <p>My favorite dessert is chocolate mouse. My favorite color is pur-ple.</p>
+              </div>
+         </div>
+       </main>
+      <footer class="footer">
+        <div class="wrapper">
+           <p class="copy">Copyright  © 2025 Vertex Academy</p>
+            <ul class="social">
+              <li class="social-item fb"><a href="#" class="social-link">f</a></li>
+              <li class="social-item in"><a href="#" class="social-link">in</a></li> 
+            </ul>
+        </div>
+       </footer>
+</body>
 </html>
